ci: remove gosec scan and tighten cognitive complexity threshold
Remove gosec security scanning job from CI workflow, keeping only
govulncheck for vulnerability scanning. This consolidates security
scanning to a single tool and reduces CI redundancy.

Additionally, lower gocognit min-complexity threshold from 23 to 15
to enforce stricter code complexity standards and improve code
maintainability.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,25 +109,8 @@ jobs:
         run: go build -n .
 
   # ============================================================================
-  # SECURITY - Security Scans
+  # SECURITY - Vulnerability Scanning
   # ============================================================================
-
-  gosec:
-    name: gosec Security Scan
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
-
-      - name: Install gosec
-        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
-
-      - name: Run gosec
-        run: gosec ./cmd/... ./internal/...
 
   govulncheck:
     name: govulncheck
